--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
    - ACCESS_KEY=${ACCESS_KEY}
    - SECRET_KEY=${SECRET_KEY}
    - BUCKETNAME=${BUCKETNAME}
-   - S3_URL=${S3_URL}
+   - S3_ENDPOINT=${S3_ENDPOINT}
