Add arm64 platform

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
   tty: true
   devices:
     - "/dev/fuse"
+  volumes:
+    - ./backups:/var/backups
   environment:
    - ACCESS_KEY=${ACCESS_KEY}
    - SECRET_KEY=${SECRET_KEY}
