--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
            "${{env.BUILDKIT_IMAGE}}:${{env.TAG_NAME}}"
            "${{env.BUILDKIT_IMAGE}}:v1.0-beta"
